<resources>
    <string name="app_name">Engage</string>
    <string name="facebook_app_id">1356409037788347</string>
    <string name="google_maps_api_key">AIzaSyAb-qL9S_hAeFtES2zaQzcqsFpB4a_xAbA</string>
    <string name="fb_login_protocol_scheme">fb1356409037788347</string>
    <string name="welcome">Welcome to Engage</string>
    <string name="host">Host</string>
    <string name="location">Location</string>
    <string name="time_and_date">Time and Date</string>
    <string name="event_description">Event Description</string>
    <string name="number_of_people">#</string>
    <string name="people_attending">People Attending</string>
    <string name="save">Save</string>
    <string name="event_name">Event Name</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="cancel">Cancel</string>
    <string name="event_info">Event Info</string>
    <string name="issues">Global Issues</string>
    <string name="launch_google_maps">Launch Google Maps</string>
    <string name="_0_min">0 min</string>
    <string name="_0_km">0 km</string>
    <string name="miles_5">5mi</string>
    <string name="miles_10">10mi</string>
    <string name="miles_15">15mi</string>
    <string name="custom_miles">Custom</string>
    <string name="open_drawer">openDrawer</string>
    <string name="close_drawer">closeDrawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string-array name="query_suggestions">
        <item>women</item>
        <item>hunger</item>
        <item>climate change</item>
        <item>human rights</item>
        <item>poverty</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>

