<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.engage.EventDetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvHost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvEventName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/host"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvEventInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHost"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/event_info"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:layout_alignStart="@+id/tvEventInfo"
                android:layout_below="@+id/tvEventInfo" />

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/event_name"
                android:textSize="36sp"
                android:textStyle="bold" />
            <fragment
                android:id="@+id/youtubeFragment"
                android:layout_below="@+id/tvEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:name="com.google.android.youtube.player.YouTubePlayerFragment">
            </fragment>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:onClick="saveEvent"/>
    <Button
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp" />
</RelativeLayout>
